--- a/platformics/codegen/tests/test_schemas/platformics.yaml
+++ b/platformics/codegen/tests/test_schemas/platformics.yaml
@@ -35,9 +35,18 @@ enums:
       DNA:
   SequencingProtocol:
     permissible_values:
-      MNGS:
-      TARGETED:
-      MSSPE:
+      ampliseq:
+      artic:
+      artic_v3:
+      artic_v4:
+      artic_v5:
+      combined_msspe_artic:
+      covidseq:
+      midnight:
+      msspe:
+      snap:
+      varskip:
+      easyseq:
   SequencingTechnology:
     permissible_values:
       Illumina:
