--- a/workflows/cerbos/policies/derived_roles_common.yaml
+++ b/workflows/cerbos/policies/derived_roles_common.yaml
@@ -8,7 +8,9 @@ derivedRoles:
       parentRoles: ["user"]
       condition:
         match:
-          expr: request.resource.attr.user_id == request.principal.attr.user_id
+          any:
+            of:
+              - expr: request.resource.attr.owner_user_id == request.principal.attr.user_id
 
     - name: project_member
       parentRoles: ["user"]
@@ -16,5 +18,13 @@ derivedRoles:
         match:
           any:
             of:
-              - expr: request.resource.attr.project_id in request.principal.attr.member_projects
-              - expr: request.resource.attr.project_id in request.principal.attr.admin_projects
+              - expr: request.resource.attr.collection_id in request.principal.attr.member_projects
+              - expr: request.resource.attr.collection_id in request.principal.attr.admin_projects
+
+    - name: admin
+      parentRoles: ["user"]
+      condition:
+        match:
+          any:
+            of:
+              - expr: request.resource.attr.collection_id in request.principal.attr.admin_projects
