clean up derived roles

--- a/workflows/cerbos/policies/derived_roles_common.yaml
+++ b/workflows/cerbos/policies/derived_roles_common.yaml
@@ -8,9 +8,7 @@ derivedRoles:
       parentRoles: ["user"]
       condition:
         match:
-          any:
-            of:
-              - expr: request.resource.attr.owner_user_id == request.principal.attr.user_id
+          expr: request.resource.attr.owner_user_id == request.principal.attr.user_id
 
     - name: project_member
       parentRoles: ["user"]
@@ -25,6 +23,4 @@ derivedRoles:
       parentRoles: ["user"]
       condition:
         match:
-          any:
-            of:
-              - expr: request.resource.attr.collection_id in request.principal.attr.admin_projects
+          expr: request.resource.attr.collection_id in request.principal.attr.admin_projects
