Reduce resource usage in localdev.

--- a/entities/docker-compose.yml
+++ b/entities/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       - DEFAULT_UPLOAD_BUCKET=local-bucket
       - DEFAULT_UPLOAD_PROTOCOL=s3
       - BOTO_ENDPOINT_URL=http://motoserver.czidnet:4000
+      - WORKERS=2
       - AWS_REGION=us-west-2
       - AWS_ACCESS_KEY_ID=test
       - AWS_SECRET_ACCESS_KEY=test
