--- a/workflows/docker-compose.yml
+++ b/workflows/docker-compose.yml
@@ -14,6 +14,9 @@ x-db-variables: &db-variables
   ? PLATFORMICS_DATABASE_PASSWORD=password_postgres
   ? PLATFORMICS_DATABASE_NAME=workflows
 
+x-webservice-variables: &webservice-variables
+  ? WORKERS=2
+
 x-redis-variables: &redis-variables
   ? PLATFORMICS_EVENT_BUS__REDIS__REDIS_URL=redis://redis.czidnet:6378
   ? PLATFORMICS_EVENT_BUS__REDIS__QUEUE_NAME=workflow-events
@@ -76,7 +79,7 @@ services:
     stdin_open: true # Helps with pdb
     tty: true # Helps with pdb
     environment:
-      <<: [*aws-variables, *db-variables, *redis-variables, *workflow-variables, *cerbos-variables]
+      <<: [*aws-variables, *db-variables, *redis-variables, *workflow-variables, *cerbos-variables, *webservice-variables]
   workflows-worker:
     build:
       context: ".."
