--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -244,6 +244,10 @@ classes:
       has_ercc:
         range: boolean
         required: true
+      # Is this sequencing read exported from clearlabs? Clearlabs exports have undergone filtering
+      clearlabs_export:
+        range: boolean
+        required: true
       # Can specify a taxon if it's known, e.g. for "Viral Consensus Genome" pipeline (optional)
       taxon:
         range: Taxon
