[CZID-9162] Move redis port for workflows to not interfere with czid webapp (#154)
* Move redis port for workflows to not interfere with czid webapp

* Reduce resource usage in localdev.

--- a/workflows/docker-compose.yml
+++ b/workflows/docker-compose.yml
@@ -14,8 +14,11 @@ x-db-variables: &db-variables
   ? PLATFORMICS_DATABASE_PASSWORD=password_postgres
   ? PLATFORMICS_DATABASE_NAME=workflows
 
+x-webservice-variables: &webservice-variables
+  ? WORKERS=2
+
 x-redis-variables: &redis-variables
-  ? PLATFORMICS_EVENT_BUS__REDIS__REDIS_URL=redis://redis.czidnet
+  ? PLATFORMICS_EVENT_BUS__REDIS__REDIS_URL=redis://redis.czidnet:6378
   ? PLATFORMICS_EVENT_BUS__REDIS__QUEUE_NAME=workflow-events
   
 x-workflow-variables: &workflow-variables
@@ -39,7 +42,8 @@ services:
   redis:
     image: redis:7
     ports:
-      - "6379:6379"
+      - "6378:6378"
+    command: ["redis-server", "--port", "6378"]
   postgres:
     image: postgres:15
     restart: always
@@ -75,7 +79,7 @@ services:
     stdin_open: true # Helps with pdb
     tty: true # Helps with pdb
     environment:
-      <<: [*aws-variables, *db-variables, *redis-variables, *workflow-variables, *cerbos-variables]
+      <<: [*aws-variables, *db-variables, *redis-variables, *workflow-variables, *cerbos-variables, *webservice-variables]
   workflows-worker:
     build:
       context: ".."
