Add "2dArrayInt" type and update codegen to support it

--- a/entities/schema/platformics.yaml
+++ b/entities/schema/platformics.yaml
@@ -20,6 +20,11 @@ types:
     base: str
     description: A UUID
 
+  2dArrayInt:
+    uri: xsd:array
+    base: int
+    description: A 2D array of integers, e.g. [[1, 2, 3], [4, 5, 6]]
+
 enums:
   FileStatus:
     permissible_values:
@@ -406,8 +411,6 @@ classes:
       consensus_genome:
         range: ConsensusGenome
         required: true
-      coverage_depth:
-        range: float
       reference_genome_length:
         range: float
       percent_genome_called:
@@ -428,8 +431,16 @@ classes:
         range: int
       n_ambiguous:
         range: int
-      coverage_viz_summary_file:
-        range: File
+      coverage_depth:
+        range: float
+      coverage_breadth:
+        range: float
+      coverage_bin_size:
+        range: float
+      coverage_total_length:
+        range: int
+      coverage_viz:
+        range: 2dArrayInt
     annotations:
       plural: MetricsConsensusGenomes
 
